{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 12,
  "lineage": "845f539a-db10-b3e6-8f0c-0c2c3b0cf745",
  "resources": [
    {
      "module": "module.demo-igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732343865328:internet-gateway/igw-0c70a49901c05493f",
            "id": "igw-0c70a49901c05493f",
            "owner_id": "732343865328",
            "tags": {
              "Name": "Demo_IGW_01"
            },
            "tags_all": {
              "Name": "Demo_IGW_01"
            },
            "vpc_id": "vpc-057de7a8fad97db96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.demo-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d2dbb426772b03a",
            "arn": "arn:aws:ec2:ap-south-1:732343865328:instance/i-0b645383c9375f25f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b645383c9375f25f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6393a45bd15eec9",
            "private_dns": "ip-10-0-1-243.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-13-206-80-193.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.80.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c69654924ee8221",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6d88efebaeea669",
            "tags": {
              "Name": "DemoInstance"
            },
            "tags_all": {
              "Name": "DemoInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd0bbe19cf415396"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.demo-sg.aws_security_group.demo-sg",
            "module.demo-vpc.aws_subnet.demo-subnet",
            "module.demo-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732343865328:route-table/rtb-0529d8b5e4c9ca146",
            "id": "rtb-0529d8b5e4c9ca146",
            "owner_id": "732343865328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c70a49901c05493f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-057de7a8fad97db96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.demo-igw.aws_internet_gateway.demo-igw",
            "module.demo-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo-route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ce043d9fcb87faf",
            "route_table_id": "rtb-0529d8b5e4c9ca146",
            "subnet_id": "subnet-0f6d88efebaeea669"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.demo-igw.aws_internet_gateway.demo-igw",
            "module.demo-route-table.aws_route_table.demo-route-table",
            "module.demo-vpc.aws_subnet.demo-subnet",
            "module.demo-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732343865328:security-group/sg-0dd0bbe19cf415396",
            "description": "Demo Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd0bbe19cf415396",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "732343865328",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-057de7a8fad97db96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.demo-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732343865328:subnet/subnet-0f6d88efebaeea669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6d88efebaeea669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732343865328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo_Subnet_01"
            },
            "tags_all": {
              "Name": "Demo_Subnet_01"
            },
            "vpc_id": "vpc-057de7a8fad97db96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.demo-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732343865328:vpc/vpc-057de7a8fad97db96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4e877d3ce62bad1",
            "default_route_table_id": "rtb-00a8f16d7de045352",
            "default_security_group_id": "sg-0f537ecbc037f9df1",
            "dhcp_options_id": "dopt-0ac1ed82f51b9b7ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057de7a8fad97db96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a8f16d7de045352",
            "owner_id": "732343865328",
            "tags": {
              "Name": "Demo_VPC_01"
            },
            "tags_all": {
              "Name": "Demo_VPC_01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}